# rne_sim2sim

./: .gitignore  LICENSE  package.xml  setup.cfg  setup.py
config/: controllers.yaml
launch/: rl_play.launch.py  spawn_robot.launch.py
models/: flat_env_cfg.py
rne_sim2sim/: inspect_model.py  rl_player.py
urdf/: cerberus.gazebo  cerberus.trans  cerberus.xacro  materials.xacro
worlds/: my_world.sdf  my_world.world
